--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,19 +8,22 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="textViewRegular" parent="TextAppearance.AppCompat">
+    <style name="rowTextLarge" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textSize" >14sp</item>
+        <item name="android:fontFamily">@font/poppins_medium</item>
     </style>
 
-    <style name="textViewSmall" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/colorPrimary</item>
+    <style name="rowTextRegular" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textSize" >12sp</item>
+        <item name="android:fontFamily">@font/poppins_medium</item>
     </style>
 
-    <style name="textViewTiny" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/colorPrimary</item>
-        <item name="android:textSize" >8sp</item>
+    <style name="rowTextTiny" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize" >10sp</item>
+        <item name="android:fontFamily">@font/poppins_light</item>
     </style>
 
 </resources>
